# by_data_science_exercise

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/by_data_science_exercise/: loss_definitions.py  loss_study.py  model.py  plotting.py
tests/: test_poisson_cdf.py
